Add table of contents and pages skeleton

--- a/src/_toc.yml
+++ b/src/_toc.yml
@@ -4,5 +4,10 @@
 format: jb-book
 root: index
 chapters:
-- file: intro
+- file: introduction
 - file: overview
+- file: getting-started
+- file: plugins
+- file: themes
+- file: data-management
+- file: acknowledgments
