--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "ckan"]
-	path = lab/src/ckan
+	path = lab/modules/ckan
 	url = https://github.com/ckan/ckan.git
 [submodule "lab/datapusher"]
-	path = lab/src/datapusher
+	path = lab/modules/datapusher
 	url = https://github.com/ckan/datapusher.git
