--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,5 +18,6 @@ requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
 
 [tool.poetry.scripts]
-# build = jupyter-book build src --builder linkcheck
+# build = jupyter-book build src
+# linkcheck = jupyter-book build src --builder linkcheck
 # publish = ghp-import -n -p -f src/_build/html
