--- a/lab/tutorials/postgis/pyproject.toml
+++ b/lab/tutorials/postgis/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-name = "lab-flask"
+name = "ckan101-lab-postgis"
 version = "0.1.0"
 description = ""
 authors = ["Alessio Cimarelli <jenkin@dataninja.it>"]
@@ -12,7 +12,6 @@ gunicorn = "^20.1.0"
 Jinja2 = "^3.1.2"
 SQLAlchemy = "^1.4.41"
 psycopg2-binary = "^2.9.4"
-GeoAlchemy = "^0.7.2"
 GeoAlchemy2 = "^0.12.5"
 requests = "^2.28.1"
 
