Update solr tutorial

--- a/lab/tutorials/solr/docker-compose.yml
+++ b/lab/tutorials/solr/docker-compose.yml
@@ -8,9 +8,7 @@ services:
       - "8983:8983"
     command:
       - solr-precreate
-      - gettingstarted
-    volumes:
-      - ./solrconfig.xml:/var/solr/data/gettingstarted/conf/solrconfig.xml
+      - reuters
 
   app:
     build: .
