Fix docker compose configurations

--- a/lab/docker-compose.ports.yml
+++ b/lab/docker-compose.ports.yml
@@ -4,9 +4,9 @@ version: "3"
 
 services:
 
-  datapusher:
-    ports:
-      - "${DATAPUSHER_PORT}:8000"
+  # datapusher:
+  #   ports:
+  #     - "${DATAPUSHER_PORT}:8000"
 
   solr:
     ports:
