Use ckanext/envvars instead of custom Dockerfile for advanced configuration

--- a/lab/ckan/.env.example
+++ b/lab/ckan/.env.example
@@ -45,6 +45,10 @@ CKAN_SMTP_MAIL_FROM=ckan@localhost
 CKAN__PLUGINS="envvars image_view text_view recline_view datastore datapusher"
 # If used with ckan/Dockerfile.ext
 #CKAN__PLUGINS="envvars image_view text_view recline_view datastore datapusher dcat dcat_json_interface structured_data"
+
+# Custom envvars
+# See https://github.com/okfn/ckanext-envvars
+CKAN__LOCALE_DEFAULT=en
 CKAN__HARVEST__MQ__TYPE=redis
 CKAN__HARVEST__MQ__HOSTNAME=redis
 CKAN__HARVEST__MQ__PORT=6379
