Working instance with extensions

--- a/lab/ckan/.env
+++ b/lab/ckan/.env
@@ -41,15 +41,47 @@ CKAN_SMTP_MAIL_FROM=ckan@localhost
 
 # Extensions
 
-# If used with ckan/Dockerfile
-CKAN__PLUGINS=envvars image_view text_view recline_view datastore datapusher
-# If used with ckan/Dockerfile.ext
-#CKAN__PLUGINS=envvars image_view text_view recline_view datastore datapusher dcat dcat_json_interface structured_data
+# If used with ckan/Dockerfile (base instance)
+#CKAN__PLUGINS=envvars image_view text_view recline_view datastore datapusher
+# If used with ckan/Dockerfile.ext (with extensions)
+CKAN__PLUGINS=envvars resource_proxy image_view text_view recline_view geojson_view datastore datapusher harvest ckan_harvester spatial_metadata spatial_query dcat dcat_json_interface structured_data multilang multilang_harvester dcatapit_pkg dcatapit_org dcatapit_config dcatapit_theme_group_mapper dcatapit_harvest_list dcatapit_harvester dcatapit_csw_harvester dcatapit_vocabulary
+CKAN__VIEWS__DEFAULT_VIEWS=image_view text_view recline_view geojson_view
 
 # Custom envvars
 # See https://github.com/okfn/ckanext-envvars
+
+# CKAN Core
+# See https://docs.ckan.org/en/2.9/maintaining/configuration.html
 CKAN__LOCALE_DEFAULT=it
 CKAN__AUTH__CREATE_USER_VIA_WEB=False
+
+# Ckanext Harvest
+# See https://github.com/ckan/ckanext-harvest
+#CKAN__HARVEST__LOG_SCOPE=-1
+#CKAN__HARVEST__LOG_TIMEFRAME=30
+#CKAN__HARVEST__LOG_LEVEL=info
+#CKANEXT__HARVEST__DEFAULT_DATASET_NAME_APPEND=number-sequence
+#CKAN__HARVEST__STATUS_MAIL__ERRORED=True
+#CKAN__HARVEST__STATUS_MAIL__ALL=True
+
+# Ckanext Spatial
+# See https://github.com/ckan/ckanext-spatial
+#CKAN__SPATIAL__SRID=4326
+
+# Ckanext DCAT
+# See https://github.com/ckan/ckanext-dcat
+CKANEXT__DCAT__BASE_URI=http://localhost:5000
+#CKANEXT__DCAT__CATALOG_ENDPOINT=/catalog/{_format}
+#CKANEXT__DCAT__DATASETS_PER_PAGE=100
+
+# Ckanext DCAT_AP-IT
+# See https://github.com/geosolutions-it/ckanext-dcatapit
+CKANEXT__DCAT__RDF__PROFILES=euro_dcat_ap it_dcat_ap
+CKANEXT__DCATAPIT__THEME_GROUP_MAPPING__FILE=/srv/app/src/ckanext-dcatapit/examples/theme_to_group.ini
+CKAN__DCATAPIT__EUROVOC_LOCATION=/srv/app/src/ckanext-dcatapit/vocabularies/eurovoc-filtered.rdf
+CKANEXT__DCATAPIT__LOCALIZED_RESOURCES=True
+
+# Ckanext Harvest
 CKAN__HARVEST__MQ__TYPE=redis
 CKAN__HARVEST__MQ__HOSTNAME=redis
 CKAN__HARVEST__MQ__PORT=6379
