--- a/lab/ckan/ckan/Dockerfile.ext
+++ b/lab/ckan/ckan/Dockerfile.ext
@@ -1,33 +1,53 @@
 FROM openknowledge/ckan-base:2.9
 
-MAINTAINER Your Name Here <you@example.com>
-
 # Set timezone
 ARG TZ
 RUN echo $TZ > /etc/timezone
 RUN cp /usr/share/zoneinfo/$TZ /etc/localtime
 
+RUN pip install --upgrade pip
+
 # Install any extensions needed by your CKAN instance
 # (Make sure to add the plugins to CKAN__PLUGINS in the .env file)
 
-# Harvest (v1.4.1)
-#RUN pip install -e git+https://github.com/ckan/ckanext-harvest.git@v1.4.1#egg=ckanext-harvest && \
-#    pip install -r https://raw.githubusercontent.com/ckan/ckanext-harvest/v1.4.1/requirements.txt
+# Harvest
+# See https://github.com/ckan/ckanext-harvest
+ENV CKANEXT_HARVEST_VERSION=v1.4.1
+RUN pip install -e git+https://github.com/ckan/ckanext-harvest.git@${CKANEXT_HARVEST_VERSION}#egg=ckanext-harvest && \
+    pip install -r https://raw.githubusercontent.com/ckan/ckanext-harvest/${CKANEXT_HARVEST_VERSION}/requirements.txt
 
-# DCAT (v1.3.0)
-RUN pip install -e git+https://github.com/ckan/ckanext-dcat.git@v1.3.0#egg=ckanext-dcat && \
-    pip install -r https://raw.githubusercontent.com/ckan/ckanext-dcat/v1.3.0/requirements.txt
+# Spatial (master)
+# See https://github.com/ckan/ckanext-spatial
+ENV PROJ_DIR=/usr
+RUN apk add --no-cache proj proj-dev proj-util geos
+RUN pip install -e git+https://github.com/ckan/ckanext-spatial.git#egg=ckanext-spatial && \
+    pip install -r https://raw.githubusercontent.com/ckan/ckanext-spatial/master/requirements.txt
 
-# DCAT_AP-IT (latest)
-#RUN pip install -e git+https://github.com/geosolutions-it/ckanext-dcatapit.git#egg=ckanext-dcatapit && \
-#    pip install -r https://raw.githubusercontent.com/geosolutions-it/ckanext-dcatapit/master/requirements.txt
-#RUN ckan config-tool $CKAN_INI "ckanext.dcat.rdf.profiles = euro_dcat_ap it_dcat_ap"
-#RUN ckan config-tool $CKAN_INI "ckanext.dcat.base_uri = http://localhost:5000"
+# Geoview
+# See https://github.com/ckan/ckanext-geoview
+ENV CKANEXT_GEOVIEW_VERSION=v0.0.20
+RUN pip install -e git+https://github.com/ckan/ckanext-geoview.git@${CKANEXT_GEOVIEW_VERSION}#egg=ckanext-geoview
+
+# DCAT
+# See https://github.com/ckan/ckanext-dcat
+ENV CKANEXT_DCAT_VERSION=v1.3.0
+RUN pip install -e git+https://github.com/ckan/ckanext-dcat.git@${CKANEXT_DCAT_VERSION}#egg=ckanext-dcat && \
+    pip install -r https://raw.githubusercontent.com/ckan/ckanext-dcat/${CKANEXT_DCAT_VERSION}/requirements.txt
+
+# Multilang (master)
+# See https://github.com/geosolutions-it/ckanext-multilang
+RUN pip install -e git+https://github.com/geosolutions-it/ckanext-multilang.git#egg=ckanext-multilang
+
+# DCAT_AP-IT (master)
+# Depends on Harvest, Spatial, DCAT, Multilang
+# See https://github.com/geosolutions-it/ckanext-dcatapit
+RUN pip install -e git+https://github.com/geosolutions-it/ckanext-dcatapit.git#egg=ckanext-dcatapit
+ADD https://raw.githubusercontent.com/geosolutions-it/ckanext-dcatapit/master/examples/theme_to_group.ini ${SRC_DIR}/ckanext-dcatapit/theme_to_group.ini
 
 # Install the extension(s) you wrote for your own project
 # RUN pip install -e git+https://github.com/your-org/ckanext-your-extension.git@v1.0.0#egg=ckanext-your-extension
 
-#COPY docker-entrypoint.d/* /docker-entrypoint.d/
+COPY docker-entrypoint.d/* /docker-entrypoint.d/
 
 # Apply any patches needed to CKAN core or any of the built extensions (not the
 # runtime mounted ones)
