--- a/lab/ckan/docker-compose.ext.yml
+++ b/lab/ckan/docker-compose.ext.yml
@@ -6,6 +6,6 @@ services:
     build:
       dockerfile: Dockerfile.ext
 
-  # solr:
-  #   volumes:
-  #     - ./solr/schema.xml:/opt/solr/server/solr/configsets/ckan/conf/managed-schema
+  solr:
+    volumes:
+      - ./solr/schema.xml:/opt/solr/server/solr/configsets/ckan/conf/managed-schema
