Update dependencies and add doc sections

--- a/lab/ckan/.env
+++ b/lab/ckan/.env
@@ -11,7 +11,7 @@ CKAN_SYSADMIN_PASSWORD=test1234
 CKAN_SYSADMIN_EMAIL=your_email@example.com
 TZ=Europe/Rome
 
-# Database connections (TODO: avoid duplication)
+# Database connections
 CKAN_SQLALCHEMY_URL=postgresql://ckan:ckan@db/ckan
 CKAN_DATASTORE_WRITE_URL=postgresql://ckan:ckan@db/datastore
 CKAN_DATASTORE_READ_URL=postgresql://datastore_ro:datastore@db/datastore
@@ -33,6 +33,7 @@ TEST_CKAN_REDIS_URL=redis://redis:6379/1
 # Core settings
 CKAN__STORAGE_PATH=/var/lib/ckan
 
+# Mail server settings
 CKAN_SMTP_SERVER=smtp.corporateict.domain:25
 CKAN_SMTP_STARTTLS=True
 CKAN_SMTP_USER=user
@@ -43,6 +44,7 @@ CKAN_SMTP_MAIL_FROM=ckan@localhost
 
 # If used with ckan/Dockerfile (base instance)
 #CKAN__PLUGINS=envvars image_view text_view recline_view datastore datapusher
+#CKAN__VIEWS__DEFAULT_VIEWS=image_view text_view recline_view
 # If used with ckan/Dockerfile.ext (with extensions)
 CKAN__PLUGINS=envvars resource_proxy image_view text_view recline_view geojson_view datastore datapusher harvest ckan_harvester spatial_metadata spatial_query dcat dcat_json_interface structured_data multilang multilang_harvester dcatapit_pkg dcatapit_org dcatapit_config dcatapit_theme_group_mapper dcatapit_harvest_list dcatapit_harvester dcatapit_csw_harvester dcatapit_vocabulary
 CKAN__VIEWS__DEFAULT_VIEWS=image_view text_view recline_view geojson_view
@@ -57,6 +59,10 @@ CKAN__AUTH__CREATE_USER_VIA_WEB=False
 
 # Ckanext Harvest
 # See https://github.com/ckan/ckanext-harvest
+CKAN__HARVEST__MQ__TYPE=redis
+CKAN__HARVEST__MQ__HOSTNAME=redis
+CKAN__HARVEST__MQ__PORT=6379
+CKAN__HARVEST__MQ__REDIS_DB=1
 #CKAN__HARVEST__LOG_SCOPE=-1
 #CKAN__HARVEST__LOG_TIMEFRAME=30
 #CKAN__HARVEST__LOG_LEVEL=info
@@ -80,9 +86,3 @@ CKANEXT__DCAT__RDF__PROFILES=euro_dcat_ap it_dcat_ap
 CKANEXT__DCATAPIT__THEME_GROUP_MAPPING__FILE=/srv/app/src/ckanext-dcatapit/examples/theme_to_group.ini
 CKAN__DCATAPIT__EUROVOC_LOCATION=/srv/app/src/ckanext-dcatapit/vocabularies/eurovoc-filtered.rdf
 CKANEXT__DCATAPIT__LOCALIZED_RESOURCES=True
-
-# Ckanext Harvest
-CKAN__HARVEST__MQ__TYPE=redis
-CKAN__HARVEST__MQ__HOSTNAME=redis
-CKAN__HARVEST__MQ__PORT=6379
-CKAN__HARVEST__MQ__REDIS_DB=1
