Add `extensions` section and lab

--- a/lab/ckan/.env
+++ b/lab/ckan/.env
@@ -46,7 +46,7 @@ CKAN_SMTP_MAIL_FROM=ckan@localhost
 #CKAN__PLUGINS=envvars image_view text_view recline_view datastore datapusher
 #CKAN__VIEWS__DEFAULT_VIEWS=image_view text_view recline_view
 # If used with ckan/Dockerfile.ext (with extensions)
-CKAN__PLUGINS=envvars resource_proxy image_view text_view recline_view geojson_view datastore datapusher harvest ckan_harvester spatial_metadata spatial_query dcat dcat_json_interface structured_data multilang multilang_harvester dcatapit_pkg dcatapit_org dcatapit_config dcatapit_theme_group_mapper dcatapit_harvest_list dcatapit_harvester dcatapit_csw_harvester dcatapit_vocabulary
+CKAN__PLUGINS=envvars resource_proxy image_view text_view recline_view geojson_view datastore datapusher pages harvest ckan_harvester spatial_metadata spatial_query dcat dcat_json_interface structured_data multilang multilang_harvester dcatapit_pkg dcatapit_org dcatapit_config dcatapit_theme_group_mapper dcatapit_harvest_list dcatapit_harvester dcatapit_csw_harvester dcatapit_vocabulary
 CKAN__VIEWS__DEFAULT_VIEWS=image_view text_view recline_view geojson_view
 
 # Custom envvars
@@ -56,6 +56,16 @@ CKAN__VIEWS__DEFAULT_VIEWS=image_view text_view recline_view geojson_view
 # See https://docs.ckan.org/en/2.9/maintaining/configuration.html
 CKAN__LOCALE_DEFAULT=it
 CKAN__AUTH__CREATE_USER_VIA_WEB=False
+
+# Ckanext Pages
+# See https://github.com/ckan/ckanext-pages
+CKANEXT__PAGES__ORGANIZATION=True
+CKANEXT__PAGES__GROUP=True
+#CKANEXT__PAGES__ABOUT_MENU=False
+#CKANEXT__PAGES__GROUP_MENU=False
+#CKANEXT__PAGES__ORGANIZATION_MENU=False
+CKANEXT__PAGES__ALLOW_HTML=True
+#CKANEXT__PAGES__EDITOR=medium
 
 # Ckanext Harvest
 # See https://github.com/ckan/ckanext-harvest
