Better management of activated plugins

--- a/lab/ckan/.env
+++ b/lab/ckan/.env
@@ -46,8 +46,8 @@ CKAN_SMTP_MAIL_FROM=ckan@localhost
 #CKAN__PLUGINS=envvars image_view text_view recline_view datastore datapusher
 #CKAN__VIEWS__DEFAULT_VIEWS=image_view text_view recline_view
 # If used with ckan/Dockerfile.ext (with extensions)
-CKAN__PLUGINS=envvars resource_proxy image_view text_view recline_view geojson_view datastore datapusher pages harvest ckan_harvester spatial_metadata spatial_query dcat dcat_json_interface structured_data multilang multilang_harvester dcatapit_pkg dcatapit_org dcatapit_config dcatapit_theme_group_mapper dcatapit_harvest_list dcatapit_harvester dcatapit_csw_harvester dcatapit_vocabulary
-CKAN__VIEWS__DEFAULT_VIEWS=image_view text_view recline_view geojson_view
+#CKAN__PLUGINS=envvars resource_proxy image_view text_view recline_view geojson_view datastore datapusher pages harvest ckan_harvester spatial_metadata spatial_query dcat dcat_json_interface structured_data multilang multilang_harvester dcatapit_pkg dcatapit_org dcatapit_config dcatapit_theme_group_mapper dcatapit_harvest_list dcatapit_harvester dcatapit_csw_harvester dcatapit_vocabulary
+#CKAN__VIEWS__DEFAULT_VIEWS=image_view text_view recline_view geojson_view
 
 # Custom envvars
 # See https://github.com/okfn/ckanext-envvars
