--- a/lab/ckan/.env.example
+++ b/lab/ckan/.env.example
@@ -42,9 +42,8 @@ CKAN_SMTP_MAIL_FROM=ckan@localhost
 # Extensions
 
 # If used with ckan/Dockerfile
-CKAN__PLUGINS=envvars image_view text_view recline_view datastore datapusher
-# If used with ckan/Dockerfile.ext
-#CKAN__PLUGINS=envvars image_view text_view recline_view datastore datapusher dcat dcat_json_interface structured_data
+#CKAN__PLUGINS=envvars image_view text_view recline_view datastore datapusher
+#CKAN__VIEWS__DEFAULT_VIEWS=image_view text_view recline_view
 
 # Custom envvars
 # See https://github.com/okfn/ckanext-envvars
