--- a/lab/ckan/docker-compose.ext.yml
+++ b/lab/ckan/docker-compose.ext.yml
@@ -5,6 +5,9 @@ services:
   ckan:
     build:
       dockerfile: Dockerfile.ext
+    environment:
+      - CKAN__PLUGINS=envvars resource_proxy image_view text_view recline_view geojson_view datastore datapusher pages harvest ckan_harvester spatial_metadata spatial_query dcat dcat_json_interface structured_data multilang multilang_harvester dcatapit_pkg dcatapit_org dcatapit_config dcatapit_theme_group_mapper dcatapit_harvest_list dcatapit_harvester dcatapit_csw_harvester dcatapit_vocabulary
+      - CKAN__VIEWS__DEFAULT_VIEWS=image_view text_view recline_view geojson_view
 
   solr:
     volumes:
