--- a/lab/ckan/docker-compose.dev.yml
+++ b/lab/ckan/docker-compose.dev.yml
@@ -1,57 +1,13 @@
 version: "3"
 
 services:
-  ckan-dev:
+
+  ckan:
     build:
-      context: ckan/
       dockerfile: Dockerfile.dev
-      args:
-        - TZ=${TZ}
-    env_file:
-      - .env
-    links:
-      - db
-      - solr
-      - redis
-      - datapusher
-    ports:
-      - "0.0.0.0:${CKAN_PORT}:5000"
+    environment:
+      - CKAN__PLUGINS=envvars image_view text_view recline_view datastore datapusher estar_theme
+      - CKAN__VIEWS__DEFAULT_VIEWS=image_view text_view recline_view
+      - CKAN__FAVICON=/images/favicon.png
     volumes:
       - ./src:/srv/app/src_extensions
-      - ckan_storage:/var/lib/ckan
-    
-
-  datapusher:
-    container_name: datapusher
-    build:
-      context: datapusher/
-    ports:
-      - "8800:8800"
-
-  db:
-    container_name: db
-    env_file:
-      - .env
-    build:
-      context: postgresql/
-    environment:
-      - PGDATA=/var/lib/postgresql/data/db
-    volumes:
-      - pg_data:/var/lib/postgresql/data
-
-  solr:
-    container_name: solr
-    image: ckan/ckan-solr:2.9-solr8
-    ports:
-      - "8983:8983"
-    volumes:
-      - solr_data:/opt/solr/server/solr/ckan/data/index
-
-  redis:
-    container_name: redis
-    image: redis:alpine
-
-volumes:
-  ckan_storage:
-  pg_data:
-  solr_data:
