Add explicit names to images and containers

--- a/lab/ckan/.env.example
+++ b/lab/ckan/.env.example
@@ -41,7 +41,7 @@ CKAN_SMTP_MAIL_FROM=ckan@localhost
 
 # Extensions
 
-# If used with ckan/Dockerfile
+# This envars are defined in docker-compose files
 #CKAN__PLUGINS=envvars image_view text_view recline_view datastore datapusher
 #CKAN__VIEWS__DEFAULT_VIEWS=image_view text_view recline_view
 
